# Gioco

./: CMakeLists.txt
Include/: Entity.h  Game.h  Map.h  Menu.h  Random.h  ResourceHolder.h  ResourceIdentifier.h  TextDisplay.h  World.h
Include/Characters/: AoeRanged.h  Characters.h  Enemy.h  EnemyFactory.h  Hero.h  RangedGregarious.h
Include/Objects/: Consumables.h  Medikit.h  ObjectFactory.h  Objects.h  Tile.h
Include/Objects/Weapons/: Bullets.h  (+4 more)
Include/Strategy/: ChaseStrategy.h  InspectionStrategy.h  Strategy.h
Source/: Entity.cpp  Game.cpp  Map.cpp  Menu.cpp  Random.cpp  TextDisplay.cpp  World.cpp  main.cpp
Source/Characters/: AoeRanged.cpp  Characters.cpp  Enemy.cpp  EnemyFactory.cpp  Gregarious.cpp  Hero.cpp  Melee.cpp  RangedGregarious.cpp  StRanged.cpp
Source/Libraries/: README.md
Source/Objects/: Consumables.cpp  Medikit.cpp  ObjectFactory.cpp  Objects.cpp  Tile.cpp
Source/Strategy/: ChaseStrategy.cpp  InspectionStrategy.cpp  Strategy.cpp
cpp/: AoeRanged.cpp  Characters.cpp  ChaseStrategy.cpp  Consumables.cpp  Enemy.cpp  Entity.cpp  Game.cpp  Gregarious.cpp  Hero.cpp  InspectionStrategy.cpp  Medikit.cpp  Medipack.cpp  Melee.cpp  MeleeWeapon.cpp  ObjectFactory.cpp  Objects.cpp  RangedAoeWeapon.cpp  RangedGregarious.cpp  RangedStWeapon.cpp  RangedWeapon.cpp  StRanged.cpp  Strategy.cpp  Weapon.cpp
h/: Characters.h  ChaseStrategy.h  Enemy.h  Game.h  Gregarious.h  Hero.h  InspectionStrategy.h  Medikit.h  Medipack.h  Melee.h  ObjectFactory.h  Objects.h  RangedAoeWeapon.h  RangedGregarious.h  RangedStWeapon.h  RangedWeapon.h  StRanged.h  Weapon.h
(+5 files in other folders)
